kubernetes/apps/kube-system/cilium/policies/gateway/external.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.0.47"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${EXTERNAL_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${EXTERNAL_DOMAIN/./-}-production-tls
