kubernetes/apps/kube-system/cilium/policies/gateway/gateway-external-network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-external-network-policy
spec:
  endpointSelector:
    matchLabels:
      gateway-name: external
  ingress:
    - fromCIDRSet:
      - cidrGroupRef: group-cloudflare
